# duck_client

./: .gitignore  .yamllint  CLIENT_UPDATE.md  CLI_USAGE.md  Cargo.toml  DATABASE_MIGRATION.md  DUCKER_UPDATE.md  PLATFORM_SUPPORT.md  PROJECT_METADATA.md  config.toml
.cursor/rules/: rust.mdc  server-http-api-doc.mdc  tauri.mdc
.github/workflows/: RELEASE_BUILD_FIX.md  ci.yml  cli-ui-build.yml  release.yml
cli-ui/: BUILD_OPTIMIZATION.md  CIRCULAR_DEPENDENCY_FIX.md  GITHUB_ACTIONS_FIX.md  LOG_DUPLICATE_AND_AUTOSCROLL_FIX.md  LOG_DUPLICATE_FIX_FINAL.md  LOG_MEMORY_OPTIMIZATION.md  LOG_PERFORMANCE_OPTIMIZATION.md  PARAMETER_INPUT_SYSTEM.md  SERVER_CONNECTION_FIX.md  TESTING_CHECKLIST.md  UPDATER_CONFIG.md  VERSION_SYNC_FIX.md  VERSION_UPDATE_LOGIC_FIX.md  download-duck-cli.sh  package-lock.json  package.json
cli-ui/src/: App.css  App.tsx
cli-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cli-ui/src-tauri/capabilities/: default.json
cli-ui/src-tauri/src/: lib.rs  main.rs
cli-ui/src-tauri/src/commands/: cli.rs  config.rs  mod.rs
cli-ui/src/components/: ErrorBoundary.tsx  OperationPanel.tsx  ParameterInputModal.tsx  TerminalWindow.tsx  WelcomeSetupModal.tsx  WorkingDirectoryBar.tsx
cli-ui/src/config/: commandConfigs.ts
cli-ui/src/types/: index.ts
cli-ui/src/utils/: tauri.ts
client-core/: Cargo.toml
client-core/migrations/: init_duckdb.sql
client-core/src/: api.rs  api_config.rs  authenticated_client.rs  backup.rs  config.rs  config_manager.rs  constants.rs  database.rs  database_manager.rs  downloader.rs  error.rs  lib.rs  upgrade.rs
client-core/src/container/: command.rs  config.rs  image.rs  manager.rs  mod.rs  service.rs  types.rs
client-core/src/db/: actor.rs  manager.rs  messages.rs  mod.rs  models.rs
client-core/src/sql_diff/: README.md  differ.rs  generator.rs  mod.rs  parser.rs  tests.rs  types.rs
client-core/templates/: config.toml.template
client-ui/: deno.json  package.json  tailwind.config.js  tsconfig.json
client-ui/src/: App.css  App.tsx
client-ui/src-tauri/: Cargo.toml  tauri.conf.json
client-ui/src-tauri/capabilities/: default.json
client-ui/src-tauri/src/: commands.rs  lib.rs
client-ui/src-tauri/src/commands/: README.md  directory.rs  init.rs  logs.rs  mod.rs  services.rs  system.rs  tasks.rs  types.rs  ui.rs  upgrade.rs  version.rs
client-ui/src/components/Layout/: AppLayout.tsx
client-ui/src/pages/: About.tsx  BackupRecovery.tsx  Dashboard.tsx  InitializationProgress.tsx  ServiceManagement.tsx  Settings.tsx  UpgradeManagement.tsx  WelcomeSetup.tsx
client-ui/src/types/: index.ts
client-ui/src/utils/: tauri.ts
data/: duck_client.db  duck_client.db.wal
data/web/: index.html
docs/: GITHUB_ACTIONS.md
duck-cli/: Cargo.toml
duck-cli/src/: app.rs  cli.rs  docker_utils.rs  init.rs  lib.rs  main.rs  project_info.rs  ui_support.rs  utils.rs
duck-cli/src/commands/: auto_backup.rs  auto_upgrade_deploy.rs  backup.rs  cache.rs  check_update.rs  docker_service.rs  ducker.rs  mod.rs  status.rs  update.rs
duck-cli/src/docker_service/: architecture.rs  config.rs  directory_permissions.rs  environment.rs  error.rs  health_check.rs  image_loader.rs  manager.rs  mod.rs  port_manager.rs  script_permissions.rs  service_manager.rs  user_mapping.rs
spec/: Design.md  Docker-Service-Architecture.md  cli-ui-task.md  cli-ui.md  design-ui.md  docker-task.md  task.md  ui-task.md  ui-tasks.md
test-deno-tauri-app/: package.json
test-deno-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
test-deno-tauri-app/src-tauri/src/: main.rs
