[package]
name = "duck-cli"
version = "0.1.0"
edition = "2024"
description = "Docker 服务管理和升级工具"
authors = ["soddygo"]
license = "MIT OR Apache-2.0"
homepage = "https://duck-client.dev"
repository = "https://github.com/soddygo/duck_client"
documentation = "see duck-cli --help"
readme = "../README.md"
keywords = ["docker", "service-management", "automation", "deployment", "backup"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "duck-cli"
path = "src/main.rs"

[dependencies]
# 核心库
client-core = { path = "../client-core", features = ["indicatif"] }

# 命令行参数解析
clap = { workspace = true, features = ["derive"] }

# 异步运行时
tokio = { workspace = true, features = ["full"] }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

# Progress indicators
indicatif = { workspace = true }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# ZIP文件处理
zip = { workspace = true }

# 执行外部命令检查
which = { workspace = true }

# 集成的 ducker Docker TUI
ducker = { workspace = true }

# HTTP 客户端
reqwest = { workspace = true }

color-eyre = "0.6"
ratatui = "0.29"

dirs = "6.0"
toml = "0.8"

nom = "8"
walkdir = { workspace = true }
libc = "0.2"

# Unix用户权限检测
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["user"] }


[lib]
name = "duck_cli"
path = "src/lib.rs"

[features]
default = []
